Mostra número de candidatos com informações na câmara

--- a/reports/a-report.html
+++ b/reports/a-report.html
@@ -120,7 +120,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><em>Atualizado em 2018-10-16 12:04:44</em></p>
+<p><em>Atualizado em 2018-10-16 16:38:56</em></p>
 <div id="total-de-respostas-de-candidaturas" class="section level2">
 <h2>Total de respostas de candidaturas</h2>
 <p>Durante cerca de dois meses os candidatos ao cargo de deputado federal foram contatados para responderem o questionário da Voz Ativa. Nos gráficos seguintes há um sumário do progresso de respostas coletadas através do SurveyMonkey.</p>
@@ -167,6 +167,10 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left">Responderam</td>
 <td align="left">17 (3.3%)</td>
+</tr>
+<tr class="even">
+<td align="left">Tem informações na câmara</td>
+<td align="left">241 (47.0%)</td>
 </tr>
 </tbody>
 </table>
